--- a/symfony/.gitignore
+++ b/symfony/.gitignore
@@ -1,3 +1,12 @@
 .idea
 .DS_Store
 todo.txt
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
