--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,26 @@
 version: '3'
 services:
-	# nginx
-	# maridb
-	# rabbit
+  nginx:
+    image: 'bitnami/nginx:latest'
+    depends_on:
+      - php
+    networks:
+      - app
+    ports:
+      - '80:80'
+      - '443:433'
+    volumes:
+      - /nginx/conf.conf:/opt/bitnami/nginx/conf/server_blocks/conf.conf
+  php:
+    image: 'bitnami/php-fpm:latest'
+    networks:
+      - app
+    volumes:
+      - /symfony/public:/app
+  # maridb
+  # rabbit
+
+
+netwokrs:
+  app:
+    driver: bridge
