--- a/nginx/conf.conf
+++ b/nginx/conf.conf
@@ -2,14 +2,14 @@ server {
   listen 0.0.0.0:80;
   server_name _;
 
-  root /app;
+  root /app/public;
 
   location / {
     try_files $uri $uri/index.php;
   }
 
   location ~ \.php {
-    fastcgi_pass php;
+    fastcgi_pass php:9000;
     fastcgi_index index.php;
     include fastcgi.conf; 
   }
