docker compose rename contaienr, fix in setup script, added composer.phar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     volumes:
       - ./symfony:/app
   mariadb:
-    container_name: 'mariadb'
+    container_name: 'database'
     image: 'mariadb:latest'
     networks:
       - app
