--- a/nginx/conf.conf
+++ b/nginx/conf.conf
@@ -5,12 +5,23 @@ server {
   root /app/public;
 
   location / {
-    try_files $uri $uri/index.php;
+    try_files $uri /index.php$is_args$args;
   }
 
-  location ~ \.php {
+  location ~ ^/index\.php(/|$) {
     fastcgi_pass php:9000;
+
+    fastcgi_split_path_info ^(.+\.php)(/.*)$;
+
+    fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+    fastcgi_param DOCUMENT_ROOT $realpath_root;
+    
     fastcgi_index index.php;
-    include fastcgi.conf; 
+    include fastcgi.conf;
+    internal;
+  }
+
+  location ~ \.php$ {
+    return 404;
   }
 }
