--- a/nginx/conf.conf
+++ b/nginx/conf.conf
@@ -9,7 +9,7 @@ server {
   }
 
   location ~ ^/index\.php(/|$) {
-    fastcgi_pass php:9000;
+    fastcgi_pass fpm:9000;
 
     fastcgi_split_path_info ^(.+\.php)(/.*)$;
 
