--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: 'nginx'
     image: 'bitnami/nginx:latest'
     depends_on:
-      - php
+      - fpm
     networks:
       - app
     ports:
