--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -14,12 +14,14 @@
         "phpstan/phpdoc-parser": "^1.24",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
+        "symfony/filesystem": "6.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.3.*",
         "symfony/property-access": "6.3.*",
         "symfony/property-info": "6.3.*",
         "symfony/runtime": "6.3.*",
         "symfony/serializer": "6.3.*",
+        "symfony/validator": "6.3.*",
         "symfony/yaml": "6.3.*"
     },
     "require-dev": {
