symfony config small fix

--- a/symfony/config/services.yaml
+++ b/symfony/config/services.yaml
@@ -25,4 +25,4 @@ services:
 
     App\Storage\LocalStorage:
         arguments:
-            storagePath: '%kernel.project_dir%/var/storage'
+            $storagePath: '%kernel.project_dir%/var/storage'
