--- a/symfony/.env
+++ b/symfony/.env
@@ -28,3 +28,10 @@ APP_SECRET=bd9e635521cec542fead434fb2822ed4
 DATABASE_URL="mysql://root:root@database:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+ MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rabbit:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
