--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -1,3 +1,3 @@
-FROM bitname/php-fpm:latest
-RUN apt-get update && apt-get install -y autoconf build-essential
+FROM docker.io/bitname/php-fpm:8.2
+RUN apt-get update && apt-get install -y autoconf build-essential librabbitmq-dev
 RUN pecl install amqp
