--- a/symfony/.env
+++ b/symfony/.env
@@ -31,7 +31,7 @@ DATABASE_URL="mysql://root:root@database:3306/app?serverVersion=10.11.2-MariaDB&
 
 ###> symfony/messenger ###
 # Choose one of the transports below
- MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rabbit:5672/%2f/messages
+ MESSENGER_TRANSPORT_DSN=amqp://root:root@rabbit:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 # MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
