--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -1,3 +1,3 @@
-FROM docker.io/bitname/php-fpm:8.2
+FROM bitnami/php-fpm:latest
 RUN apt-get update && apt-get install -y autoconf build-essential librabbitmq-dev
 RUN pecl install amqp
