Serializer camelCase to snake_case. Test fixes. Small fixes

--- a/symfony/config/packages/messenger.yaml
+++ b/symfony/config/packages/messenger.yaml
@@ -14,7 +14,7 @@ framework:
         routing:
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
-            'App\Message\CsvUploaded': async
+            'App\Message\CsvUploadedMessage': async
 
 when@test:
     framework:
