rewrite ImportService to use a custom connection with insert ignore and disabled logging/profiling

--- a/symfony/config/services.yaml
+++ b/symfony/config/services.yaml
@@ -26,3 +26,5 @@ services:
     App\Storage\LocalStorage:
         arguments:
             $storagePath: '%kernel.project_dir%/var/storage'
+
+    App\Connection\BatchConnection: '@doctrine.dbal.batch_connection'
