--- a/symfony/config/packages/doctrine.yaml
+++ b/symfony/config/packages/doctrine.yaml
@@ -1,12 +1,21 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
-
+        default_connection: default
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '15'
 
-        profiling_collect_backtrace: '%kernel.debug%'
+        connections:
+            default:
+                url: '%env(resolve:DATABASE_URL)%'
+                profiling_collect_backtrace: '%kernel.debug%'
+
+            batch:
+                url: '%env(resolve:DATABASE_URL)%'
+                logging: false
+                profiling: false
+                profiling_collect_backtrace: false
+
     orm:
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
