--- a/symfony/.env
+++ b/symfony/.env
@@ -25,13 +25,13 @@ APP_SECRET=bd9e635521cec542fead434fb2822ed4
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root:root@database:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://root:sTlInaYSVdVnmv9uYI2gfj@database:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
 # Choose one of the transports below
- MESSENGER_TRANSPORT_DSN=amqp://root:root@rabbit:5672/%2f/messages
+ MESSENGER_TRANSPORT_DSN=amqp://root:sTlInaYSVdVnmv9uYI2gfj@rabbit:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 # MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
