--- a/symfony/.env.test
+++ b/symfony/.env.test
@@ -4,5 +4,5 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
-DATABASE_URL="mysql://root:root@database:3306/test?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://root:sTlInaYSVdVnmv9uYI2gfj@database:3306/test?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 MESSENGER_TRANSPORT_DSN=amqp://nouser:nouser@rabbit:5672/%2f/messages
